crates/tungstate-cli/tests/snapshots/cli__connection_update_--help.snap
---
source: crates/tungstate-cli/tests/cli.rs
expression: help
---
Change a connection. Only the flags given are touched.

There is deliberately no `--name`: the name is what link specs were written against and what the keychain entry is filed under, so a rename is two migrations wearing one hat. Remove and re-add instead.

Usage: tungstate connection update [OPTIONS] <NAME>

Arguments:
  <NAME>
          The connection name

Options:
      --scheme <SCHEME>
          Which protocol it speaks

      --host <HOST>
          Hostname, for the schemes that have one

      --port <PORT>
          Port, where it differs from the protocol default

      --user <USERNAME>
          Who to connect as. For S3, the access key id

      --root <ROOT>
          Absolute path on the far side that every link path is relative to

      --bucket <BUCKET>
          S3: the bucket every path lives in

      --region <REGION>
          S3: the bucket's region. Needed for AWS unless the bucket is in us-east-1; other services are asked, and most accept any

      --endpoint <ENDPOINT>
          S3: the service's address, for anything that is not AWS itself, as in `https://s3.eu-central-003.backblazeb2.com` or `http://nas.local:9000`. WebDAV: the server's address, required, as in `https://nas.local:5006`

      --share <SHARE>
          SMB: the share, which the root then continues inside. `--share media --root backups` is the same as `--root media/backups`

      --option <KEY=VALUE>
          Set one per-scheme extra, as `key=value`. Repeatable

  -h, --help
          Print help (see a summary with '-h')
