crates/tungstate-cli/tests/snapshots/cli__help_output_is_stable.snap
---
source: crates/tungstate-cli/tests/cli.rs
expression: help
---
Keep folders in the shape you declared.

Usage: tungstate <COMMAND>

Commands:
  folder      Manage governed folders
  init        Give a folder a starting set of rules
  link        Manage transfer links between folders
  connection  Manage connections to places other than this machine
  log         Show everything that ever happened to a path
  whereis     Show where a file ended up
  explain     Show where a policy would put a file, and why
  plan        Work out what would have to happen for a folder to match its policy
  apply       Carry out a plan: make the folder match its policy
  dedupe      Find files that are the same file, and deal with the extra copies
  undo        Put back what `tungstate apply` did
  storage     Keep, clear and bring back what tungstate remembers
  policy      Check and inspect policies
  help        Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
