crates/tungstate-cli/tests/snapshots/cli__sync_--help.snap
---
source: crates/tungstate-cli/tests/cli.rs
expression: help
---
Keep a set of folders in step, on this machine or elsewhere

Usage: tungstate sync <COMMAND>

Commands:
  add      Keep two or more folders in step
  list     List every sync and its members
  members  Add a member to a sync, or take one out
  preview  Show what a run would do, per member, changing nothing
  run      Run a sync
  remove   Remove a sync. Every member's files stay where they are
  resolve  Settle a conflict: one member's version everywhere, or every version everywhere, each named after its member
  forget   Take a file or folder off every member, for good
  undo     Put back what a run did, on every member
  set      Change how a sync behaves from its next run on
  follow   Keep syncs in step while this runs: run whenever a member changes
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
