crates/tungstate-cli/tests/snapshots/cli__sync_set_--help.snap
---
source: crates/tungstate-cli/tests/cli.rs
expression: help
---
Change how a sync behaves from its next run on

Usage: tungstate sync set [OPTIONS] <NAME>

Arguments:
  <NAME>  The sync

Options:
      --exact                      Carry deletions too, so every member is exactly the same
      --not-exact                  Only ever add; a file deleted by hand comes back
      --on-conflict <ON_CONFLICT>  quarantine, rename or skip
      --on-remove <ON_REMOVE>      set-aside or delete. Delete needs --exact
      --verify <VERIFY>            size, hash or readback
      --cooldown <COOLDOWN>        Seconds a file must have been untouched before it moves
      --first-check <FIRST_CHECK>  full, sampled or size
      --on-launch <WHEN>           When the window opens: no, ask (show what would move, and wait for a yes), quietly (run without asking, unless the run would remove anything or needs a yes for another reason), or continuous (as quietly, and again whenever a member changes while the window is open)
  -h, --help                       Print help
